--- a/Stream Tool/Overlays/Black and White/Resources/PBW2.css
+++ b/Stream Tool/Overlays/Black and White/Resources/PBW2.css
@@ -1,6 +1,10 @@
 @font-face {
-    font-family: "Deansgate";
-    src: url('../../../Resources/Fonts/DeansgateCondensed-Bold.ttf');
+    font-family: "Aero";
+    src: url('../../../Resources/Fonts/AERO_03.ttf');
+}
+
+* {
+    box-sizing: border-box;
 }
 
 html, body {
@@ -95,9 +99,10 @@ html, body {
 
 .statNumber {
     color: #f8f8f8;
-    font-family: "Deansgate";
+    font-family: "Aero";
     font-size: 24px;
     text-shadow: 0px 0px 5px black;
+    margin-top: 4px;
 }
 
 
@@ -109,40 +114,39 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Deansgate";
+    gap: 15px;
+    font-family: "Aero";
     color: #f8f8f8;
 }
 
 
 .pokeDiv {
     position: relative;
+    height: 120px;
+    width: 300px;
+    border: thick double #949494;
+    background-color: #103b5480;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+
+.pokeTexts {
     height: 100%;
-    width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 15px;
 }
-
-
-.pokeBorder {
-    position: absolute;
-    left: 6px;
-    bottom: 16px;
-}
-
 .pokeNick {
-    position: absolute;
-    text-transform: uppercase;
     font-size: 32px;
-    left: 30px;
-    bottom: 54px;
     text-shadow: 0px 0px 5px black;
 }
 
 .pokeSubText {
-    position: absolute;
     display: flex;
     gap: 6px;
     font-size: 22px;
-    left: 30px;
-    bottom: 34px;
     text-shadow: 0px 0px 5px black;
     font-style: italic;
 }
@@ -173,7 +177,7 @@ html, body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-family: "Deansgate";
+    font-family: "Aero";
     font-size: 28px;
     color: lightcoral;
     text-shadow: 0px 0px 5px black;
