--- a/Stream Tool/Overlays/Black and White/Resources/PBW2.css
+++ b/Stream Tool/Overlays/Black and White/Resources/PBW2.css
@@ -137,17 +137,22 @@ html, body {
     flex-direction: column;
     justify-content: center;
     margin-left: 15px;
+    text-shadow: 0px 0px 5px black;
 }
+
+.pokeLvlDiv {
+    display: flex;
+    gap: 4px;
+}
+
 .pokeNick {
     font-size: 32px;
-    text-shadow: 0px 0px 5px black;
 }
 
 .pokeSubText {
     display: flex;
     gap: 6px;
     font-size: 22px;
-    text-shadow: 0px 0px 5px black;
     font-style: italic;
 }
 
