--- a/Stream Tool/Overlays/Black and White/Resources/PBW2.css
+++ b/Stream Tool/Overlays/Black and White/Resources/PBW2.css
@@ -125,7 +125,6 @@ html, body {
     height: 120px;
     width: 300px;
     border: thick double #949494;
-    background-color: #103b5480;
     overflow: hidden;
     border-radius: 5px;
 }
@@ -144,6 +143,13 @@ html, body {
     display: flex;
     gap: 4px;
 }
+
+.typeIcon {
+    height: 26px;
+    margin: -7px -5px -5px -3px;
+    filter: drop-shadow(0px 0px 2px black);
+}
+
 
 .pokeNick {
     font-size: 32px;
