The form selector works now.

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -389,6 +389,7 @@ button:hover {
 .pokeForm {
   outline: none;
   height: 30px;
+  width: 130px; /* Dudunsparce-Three-Segment is a very long name. */
   color: var(--text1);
   background: var(--bg4);
   border: 1px solid var(--focused);
