--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -359,7 +359,7 @@ button:hover {
 
 
 .pokeNickName {
-  width: 120px;
+  width: 100px;
 }
 
 
@@ -397,7 +397,7 @@ button:hover {
 .pokeForm {
   outline: none;
   height: 30px;
-  width: 130px; /* Dudunsparce-Three-Segment is a very long name. */
+  width: 90px; /* Dudunsparce-Three-Segment is a very long name. */
   color: var(--text1);
   background: var(--bg4);
   border: 1px solid var(--focused);
@@ -435,6 +435,32 @@ button:hover {
   filter: grayscale(.8);
   pointer-events: none;
   border: 1px solid var(--bg4);
+}
+
+
+.pokeShinyButton {
+  outline: none;
+  height: 30px;
+  color: var(--text1);
+  background: var(--bg4);
+  border: 1px solid var(--focused);
+  transition: border-color 100ms;
+  padding: 0px 3px 0px 4px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pokeShinyButton:hover {
+  border-color: var(--selected);
+}
+.pokeShinyButton:active {
+  background-color: var(--bg2);
+}
+.pokeShinyIcon {
+  height: 24px;
+  opacity: .3;
 }
 
 
