Migrated from background-position to object-position and better defined 'None" behaviour

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -302,12 +302,9 @@ button:hover {
 .pokeSelectorIcon {
   width: 40px;
   height: 30px;
-  object-fit: contain;
+  object-fit: none;
   image-rendering: pixelated;
   display:inline-block;
-  content: url("../Assets/Transparent.png"); /* ugly workaround; we could use a div instead of an img. */
-  background-repeat: no-repeat;
-  background-position: -0px -0px;
 }
 
 .bCharSelector {
@@ -349,12 +346,9 @@ button:hover {
 .fIconImg {
   width: 40px;
   height: 30px;
-  object-fit: contain;
+  object-fit: none;
   image-rendering: pixelated;
   display:inline-block;
-  content: url("../Assets/Transparent.png"); /* ugly workaround; we could use a div instead of an img. */
-  background-repeat: no-repeat;
-  background-position: -0px -0px;
 }
 
 
