Add alt text for GUI elements

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -403,6 +403,10 @@ button:hover {
 .pokeForm:hover {
   border-color: var(--selected);
 }
+.pokeForm:disabled {
+  pointer-events: none;
+  color: var(--text2);
+}
 
 
 .pokeGenderButton {
