--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -125,7 +125,6 @@ button:hover {
   height: 100%;
   display: flex;
   flex-direction: column;
-  transition: transform 300ms ease, opacity 300ms;
 }
 
 
@@ -179,9 +178,17 @@ button:hover {
 }
 
 
+#centerWrap {
+  display: flex;
+  height: 100%;
+  overflow-y: auto;
+}
 
 #content {
-  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 100%;
+  padding: 10px;
 }
 
 
@@ -191,7 +198,6 @@ button:hover {
   align-items: center;
   flex-direction: column;
   height: 100%;
-  overflow-y: auto;
   gap: 10px;
 }
 
