Add Fainted status to overlay

--- a/Stream Tool/Overlays/Black and White/Resources/PBW2.css
+++ b/Stream Tool/Overlays/Black and White/Resources/PBW2.css
@@ -128,6 +128,10 @@ html, body {
     overflow: visible;
     border-radius: 5px;
 }
+.pokeDed {
+    border-color: red;
+    filter: grayscale(.8);
+}
 
 
 .pokeTexts {
