--- a/Stream Tool/Overlays/Stream Intro/Resources/Intro.css
+++ b/Stream Tool/Overlays/Stream Intro/Resources/Intro.css
@@ -45,8 +45,27 @@ html, body {
     color: #fdcd07;
     text-shadow: -4px 4px #3466B0;
     font-size: 96px;
-    border-bottom: #3466B0 4px solid;
     filter: drop-shadow(0px 0px 10px black);
+}
+
+#whoThatBarDiv {
+    position: relative;
+    width: 100%;
+    height: 4px;
+    overflow: hidden;
+}
+.whoThatBar {
+    height: 4px;
+    width: 100%;
+    position: absolute;
+}
+#whoThatRevealBarBg {
+    background-color: rgb(100, 100, 100);
+    z-index: 2;
+}
+#whoThatRevealProgress {
+    background-color: #3466B0;
+    z-index: 3;
 }
 
 
@@ -108,12 +127,26 @@ html, body {
 }
 
 #countdownBg {
-    position: relative;
+    position: absolute;
     width: 3072px;
     height: 100%;
     background-image: url(Images/Countdown\ BG.png);
     background-repeat: repeat;
     animation: anibg 9s linear infinite;
+}
+
+#countdownTextDiv {
+    transform: translateY(5px);
+    display: flex;
+    gap: 16px;
+    font-family: "Aero";
+    color: #f8f8f8;
+    font-size: 62px;
+    text-shadow: 0px 0px 10px black;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -144,6 +177,15 @@ html, body {
 @keyframes fadeIn {
     from {opacity: 0}
     to {opacity: 1}
+}
+
+@keyframes barReveal {
+    from { transform: translateX(-100%); }
+    to { transform: translateX(0%); }
+}
+@keyframes barRevealnt {
+    from { transform: translateX(0%); }
+    to { transform: translateX(-100%); }
 }
 
 @keyframes anibg {
