--- a/Stream Tool/Overlays/Stream Intro/Resources/Intro.css
+++ b/Stream Tool/Overlays/Stream Intro/Resources/Intro.css
@@ -53,6 +53,7 @@ html, body {
     width: 100%;
     height: 4px;
     overflow: hidden;
+    filter: drop-shadow(0px 0px 10px black);
 }
 .whoThatBar {
     height: 4px;
