Implement get Citra team data button

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -553,6 +553,12 @@ button:hover {
 }
 
 
+.teamButtRegion {
+  display: flex;
+  gap: 8px;
+}
+
+
 /* Player Info stuff */
 #gymBadges {
   display: flex;
