Full Gen6 memory reading + auto-update

--- a/Stream Tool/Resources/CSS/GUI.css
+++ b/Stream Tool/Resources/CSS/GUI.css
@@ -582,6 +582,16 @@ button:hover {
   gap: 8px;
 }
 
+#updateTeamButt:disabled {
+  filter: grayscale(.8);
+  opacity: .5;
+  pointer-events: none;
+}
+
+.citraButtOff {
+  filter: grayscale(.8);
+}
+
 
 /* Player Info stuff */
 #gymBadges {
