--- a/Stream Tool/Overlays/Stream Intro/Resources/Intro.css
+++ b/Stream Tool/Overlays/Stream Intro/Resources/Intro.css
@@ -68,6 +68,15 @@ html, body {
 }
 
 
+#noCatchesMessage {
+    display: none;
+    font-family: "Aero";
+    color: #f8f8f8;
+    filter: drop-shadow(0px 0px 10px black);
+    font-size: 48px;
+}
+
+
 #whoThatContent {
     font-family: "Aero";
     color: #f8f8f8;
