--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -338,6 +338,7 @@ html, body {
     justify-content: center;
     margin-left: 20px;
     text-shadow: 0px 0px 5px black;
+    transition: transform .5s;
 }
 
 .pokeDivMask {
@@ -387,6 +388,7 @@ html, body {
     bottom: 0px;
     width: 100%;
     --bacColor: #363636;
+    transition: transform .5s;
 }
 .pokeHpBefore {
     background-color: var(--bacColor);
