XY: Animate adding and removing party pokemon

--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -324,6 +324,7 @@ html, body {
     border: thick double var(--activeColor);
     overflow: visible;
     border-radius: 30% / 100% 100% 100% 100%;
+    transition: opacity .25s, margin-left .6s;
 }
 .pokeDed {
     --activeColor: var(--danger) !important;
