--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -326,9 +326,24 @@ html, body {
     border-radius: 30% / 100% 100% 100% 100%;
     transition: opacity .25s, margin-left .6s;
 }
-.pokeDed {
+.pokeFai, .pokeDed {
     --activeColor: var(--danger) !important;
-    filter: grayscale(.8);
+    filter: grayscale(.8) !important;
+}
+.pokePar {
+    --activeColor: var(--warning) !important;
+}
+.pokePoi {
+    --activeColor: var(--Poi) !important;
+}
+.pokeFro {
+    --activeColor: var(--Fro) !important;
+}
+.pokeBur {
+    --activeColor: var(--Bur) !important;
+}
+.pokeSle {
+    --activeColor: var(--Sle) !important;
 }
 
 
@@ -416,6 +431,7 @@ html, body {
     z-index: 1;
     flex-shrink: 0;
 }
+
 .pokeHpBar {
     background-color: var(--bacColor);
     width: 50%;
@@ -427,18 +443,17 @@ html, body {
     border-left: none;
     overflow: hidden;
 }
-.pokeHpBarCurrent {
+.hpBar {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: var(--activeColor);
-    filter: brightness(1.7);
 }
 .pokeHpBarTotal {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background-color: grey;
+}
+.pokeHpBarCurrent {
+    background-color: var(--activeColor);
+    filter: brightness(1.7);
 }
 
 
@@ -496,4 +511,18 @@ html, body {
         opacity: 1;
         transform: translateX(0px);
     }
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px); filter: brightness(1.3); }
+    10% { transform: translate(1px, -2px); }
+    20% { transform: translate(-1px, 0px); }
+    30% { transform: translate(1px, 1px); }
+    40% { transform: translate(2px, -1px); }
+    50% { transform: translate(0px, 1px); }
+    60% { transform: translate(-1px, 0px); }
+    70% { transform: translate(1px, 1px); filter: brightness(1); }
+    80% { transform: translate(-1px, -1px); }
+    90% { transform: translate(1px, 0px); }
+    100% { transform: translate(0px, -1px); }
 }
